--- a/SCI.Modules.Category/Views/CategoryView.xaml
+++ b/SCI.Modules.Category/Views/CategoryView.xaml
@@ -6,22 +6,6 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.TextBlock.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
-    <!--<UserControl.Triggers>
-        <EventTrigger RoutedEvent="Loaded">
-            <BeginStoryboard>
-                <Storyboard>
-                    <DoubleAnimation Storyboard.TargetProperty="Opacity" From="0.0" To="1.0" Duration="0:0:1"/>
-                </Storyboard>
-            </BeginStoryboard>
-        </EventTrigger>
-    </UserControl.Triggers>-->
     <Grid>
         <materialDesign:DialogHost HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsOpen="{Binding ShowFirstDialog}" DialogContent="{Binding FirstDialogContent}" CloseOnClickAway="True">
             <Grid>
@@ -29,10 +13,6 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <!--<materialDesign:Card Padding="32" Margin="16">
-                    <TextBlock Style="{DynamicResource MaterialDesignTitleTextBlock}" TextAlignment="Center">Listado de Categorias</TextBlock>
-                </materialDesign:Card>-->
-
                 <materialDesign:Card Margin="0, 0, 0, 0" >
                     <Grid>
                         <Grid.RowDefinitions>
@@ -63,12 +43,6 @@
                                                 <TextBox Foreground="Black" Grid.Column="1" Margin="5 0 0 0" materialDesign:HintAssist.Hint="Buscar" x:Name="SearchBox" materialDesign:TextFieldAssist.DecorationVisibility="Hidden" BorderThickness="0" MinWidth="200" VerticalAlignment="Center" />
                                             </Grid>
                                         </Border>
-
-
-                                        <!--<Button Style="{StaticResource MaterialDesignRaisedButton}" Margin="10 0 10 0" HorizontalAlignment="Left" ToolTip="Imprimir">-->
-                                        <!--<Button Style="{StaticResource  MaterialDesignFloatingActionMiniButton}" Margin="10 0 10 0" HorizontalAlignment="Left" ToolTip="Información">
-                                            <materialDesign:PackIcon Kind="InformationOutline" Height="24" Width="24" />
-                                        </Button>-->
                                         <materialDesign:PopupBox Margin="16,0,16,0" StaysOpen="True">
                                             <Grid Width="300" Margin="8,8,8,8">
                                                 <Grid.ColumnDefinitions>
@@ -97,31 +71,27 @@
                                             </Grid>
                                         </materialDesign:PopupBox>
                                     </StackPanel>
-
-
                                 </Grid>
                             </materialDesign:ColorZone>
                         </materialDesign:TransitioningContent>
                         <DataGrid Padding="20" Grid.Row="1" SelectedItem="{Binding SelectedCategory}" ItemsSource="{Binding CategoriesList, Mode=TwoWay}" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" ScrollViewer.CanContentScroll="True">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="#" Binding="{Binding CategoryId}"/>
-                                <DataGridTextColumn Header="Nombre" Binding="{Binding Name}" />
-                                <DataGridTextColumn Header="Descripción" Binding="{Binding Explanation}" />
+                                <DataGridTextColumn Header="Nombre" Binding="{Binding Name}"  Width="*"/>
+                                <DataGridTextColumn Header="Descripción" Binding="{Binding Explanation}" Width="*" />
                                 <DataGridTemplateColumn Header="Acciones">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
                                             <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect ExpandIn}">
                                                 <StackPanel Orientation="Horizontal">
-                                                    <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.EditCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Editar">
+                                                    <Button Style="{StaticResource MaterialDesignRaisedButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.EditCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Editar" Width="50">
                                                         <materialDesign:PackIcon Kind="Pencil" Height="15" Width="15" />
                                                     </Button>
-                                                    <TextBlock Text="|" Margin="0 8 8 0"/>
-                                                    <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.DeleteCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Eliminar">
+                                                    <Button Style="{StaticResource MaterialDesignRaisedButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.DeleteCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Eliminar" Width="50">
                                                         <materialDesign:PackIcon Kind="Delete" Height="15" Width="15" />
                                                     </Button>
-                                                    <TextBlock Text="|" Margin="0 8 8 0"/>
-                                                    <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.DetailCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Eliminar">
-                                                        <materialDesign:PackIcon Kind="Delete" Height="15" Width="15" />
+                                                    <Button Style="{StaticResource MaterialDesignRaisedButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.DetailCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Detalle" Width="50">
+                                                        <materialDesign:PackIcon Kind="Information" Height="15" Width="15" />
                                                     </Button>
                                                 </StackPanel>
                                             </materialDesign:TransitioningContent>
@@ -131,9 +101,7 @@
                             </DataGrid.Columns>
                         </DataGrid>
                     </Grid>
-
                 </materialDesign:Card>
-
                 <materialDesign:ColorZone Mode="PrimaryMid" Grid.Row="1" Effect="{DynamicResource MaterialDesignShadowDepth5}">
                     <TextBlock Margin="16"></TextBlock>
                 </materialDesign:ColorZone>
