--- a/SCI.Modules.Customer/Views/CustomerView.xaml
+++ b/SCI.Modules.Customer/Views/CustomerView.xaml
@@ -105,37 +105,34 @@
                         <DataGrid Padding="20" Grid.Row="1" SelectedItem="{Binding SelectedCustomer}" ItemsSource="{Binding CustomersList, Mode=TwoWay}" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" ScrollViewer.CanContentScroll="True">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="#" Binding="{Binding CustomerId}"/>
-                                <DataGridTextColumn Header="Código" Binding="{Binding CustomerCode}" />
+                                <DataGridTextColumn Header="Código Cliente" Binding="{Binding CustomerCode}" Width="*" />
                                 <DataGridTextColumn Header="Nombre" Binding="{Binding Name}" />
-                                <DataGridTextColumn Header="Apellido" Binding="{Binding LastName}" />
+                                <DataGridTextColumn Header="Apellido" Binding="{Binding LastName}"/>
                                 <DataGridTextColumn Header="Correo Electrónico" Binding="{Binding Email}" />
-                                <DataGridTextColumn Header="Teléfono" Binding="{Binding Phone}" />
-                                <DataGridTextColumn Header="Dirección" Binding="{Binding Direction}" />
-                                <DataGridTextColumn Header="Nit" Binding="{Binding Nit}" />
-                                <DataGridTextColumn Header="DPI" Binding="{Binding Dpi}" />
+                                <DataGridTextColumn Header="Teléfono" Binding="{Binding Phone}" Width="*"/>
+                                <DataGridTextColumn Header="Dirección" Binding="{Binding Direction}"/>
+                                <DataGridTextColumn Header="Nit" Binding="{Binding Nit}" Width="*" />
+                                <DataGridTextColumn Header="DPI" Binding="{Binding Dpi}" Width="*"/>
                                 <DataGridTemplateColumn Header="Acciones">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
                                             <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect ExpandIn}">
                                                 <StackPanel Orientation="Horizontal">
-                                                    <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.EditCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Editar">
+                                                    <Button Style="{StaticResource MaterialDesignRaisedButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.EditCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Editar">
                                                         <StackPanel Orientation="Horizontal">
-                                                            <!--<materialDesign:PackIcon Kind="Pencil" Height="15" Width="15" />-->
-                                                            <TextBlock Text="Editar"/>
+                                                            <materialDesign:PackIcon Kind="Pencil" Height="15" Width="15" />
                                                         </StackPanel>
                                                     </Button>
                                                     <TextBlock Text="|" Margin="0 8 8 0"/>
-                                                    <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.DeleteCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Eliminar">
+                                                    <Button Style="{StaticResource MaterialDesignRaisedButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.DeleteCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Eliminar">
                                                         <StackPanel Orientation="Horizontal">
-                                                            <!--<materialDesign:PackIcon Kind="Delete" Height="15" Width="15" />-->
-                                                            <TextBlock Text="Eliminar"/>
+                                                            <materialDesign:PackIcon Kind="Delete" Height="15" Width="15" />
                                                         </StackPanel>
                                                     </Button>
                                                     <TextBlock Text="|" Margin="0 8 8 0"/>
-                                                    <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.DetailCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Detalle">
+                                                    <Button Style="{StaticResource MaterialDesignRaisedButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.DetailCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Detalle">
                                                         <StackPanel Orientation="Horizontal">
-                                                            <!--<materialDesign:PackIcon Kind="Details" Height="15" Width="15" />-->
-                                                            <TextBlock Text="Detalle"/>
+                                                            <materialDesign:PackIcon Kind="Information" Height="15" Width="15" />
                                                         </StackPanel>
                                                     </Button>
                                                 </StackPanel>
