--- a/SCI.Modules.Category/Views/CrudCategoryView.xaml
+++ b/SCI.Modules.Category/Views/CrudCategoryView.xaml
@@ -5,8 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:validator="clr-namespace:SCI.BusinessObjects.Validators;assembly=SCI.BusinessObjects"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d" >
     <Grid>
         <materialDesign:DialogHost x:Name="DialogHost" DialogContent="{Binding SecondDialogContent}" IsOpen="{Binding ShowSecondDialog}" CloseOnClickAway="True" Grid.Row="0">
             <Grid>
@@ -14,7 +13,7 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <materialDesign:ColorZone Mode="PrimaryMid" Height="80" Effect="{DynamicResource MaterialDesignShadowDepth5}" Grid.Row="0">
+                <materialDesign:ColorZone Mode="PrimaryMid" Height="80" Effect="{DynamicResource MaterialDesignShadowDepth1}" Grid.Row="0">
                     <StackPanel Orientation="Horizontal">
                         <Button x:Name="BackButton" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Margin="10, 15, 20, 25" Command="{Binding BackCommand}" HorizontalAlignment="Left" ToolTip="Atras">
                             <materialDesign:PackIcon Kind="ArrowLeft" Height="20" Width="20" />
