--- a/SCI.Modules.Inventory/Views/InventoryView.xaml
+++ b/SCI.Modules.Inventory/Views/InventoryView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:md="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
              xmlns:dragablz="clr-namespace:Dragablz;assembly=Dragablz"
              xmlns:local="clr-namespace:SCI.Modules.Inventory.Views">
@@ -442,7 +443,9 @@
                 </materialDesign:Transitioner>
             </TabItem>
             <TabItem Header="Reportes">
-
+                <StackPanel Width="350" Height="450">
+                    <TextBlock Text="Hola Mundo"/>
+                </StackPanel>
             </TabItem>
             <TabItem Header="Actividad">
 
